--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 InternetTimeConverter.iml
 out/production/InternetTimeConverter.crx
 out/production/InternetTimeConverter.pem
+out/production/InternetTimeConverter.zip
